test/files/neg/bug3392.check
bug3392.scala:9: error: not found: value x
    case x@A(x/*<-- refers to the pattern that includes this comment*/.Ex(42)) =>
             ^
one error found
